# scrapy_german

./: README.md  content.json  content_1.json  enemy.json  main.py  pyproject.toml  test.py
