[tool.poetry]
name = "scrapy-german"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "scrapy_german"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
googletrans = "4.0.0rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
